# steeropathy

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: eco-curve.html  ecosystem.json  null-control.json  post-equilibrium.html  post-instrument.html  post-inverted.html  post-onevector.html  post-v1-split.html  post-v2-numbers.html  post-v3-geometry.html  post-v4-attention.html  resonance-bipolar.json  resonance-clean.json  resonance-curve.html  resonance-freehelp.json  resonance-intensity-explicit.json  resonance-intensity.json  resonance-legible.json  resonance-memory.json  resonance-neutral.json  resonance-orth.json  resonance-plain.json  resonance-raw.json  resonance-scope.html  resonance-seedpoet.json  resonance-story.html  resonance.json  unsaid.json  zombie-hero-frog.html  zombie-hero.html  zombie-lenses.html  zombie-obsess-stats.html  zombie-quiet.html  zombie-stats.html  zombie-strains.html
experiments/: ecosystem.md  offer.md  resonance.md  transmit.md  unsaid.md  warmer.md  zombie.md
fig/: compare_runs.py  inspect_decisions.py  lens_race.py  render_columns.py  render_compare.py  render_curve.py  render_eco.py  render_equilibrium.py  render_instrument.py  render_inverted.py  render_jspace.py  render_onevector.py  render_orbs.py  render_post.py  render_resonance.py  render_round.py  render_unsaid.py  render_zombie.py  render_zombie_ahead.py  render_zombie_healer.py  render_zombie_hero.py  render_zombie_lenses.py  render_zombie_obsess_stats.py  render_zombie_quiet.py  render_zombie_stats.py  render_zombie_story.py  render_zombie_strains.py  zombie_campaign.py
space/: DEPLOY.md  Dockerfile  README.md
steeropathy/: __init__.py  ecosystem.py  hidden_dict.py  offer.py  resonance.py  server.py  transmit.py  unsaid.py  warmer.py  zombie.py
tests/: test_capture_mood.py  test_catalogue.py  test_conservation.py  test_decide.py  test_helpers.py  test_hidden_dict.py  test_integration.py  test_server_resonance.py  test_server_unsaid.py  test_tool_schemas.py  test_unsaid.py  test_warmer.py  test_zombie.py
(+96 files in other folders)
