[project]
name = "steeropathy"
version = "0.1.0"
description = "A curated lab for agents that communicate through model internals — activations and J-space, not text."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kateřina Fajmanová" }]
dependencies = []  # pure standard library — it only talks to a running brainscope over HTTP

[project.optional-dependencies]
# tests are pure stdlib (`python -m unittest discover -s tests`); pytest is just
# a nicer runner for the same files.
dev = ["pytest"]

[project.scripts]
steeropathy = "steeropathy.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["steeropathy"]
